# linkml-redcap

./: .codespellrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy-docs.yaml  pypi-publish.yaml
compatibility/: index.html
contributing/: index.html
design-decisions/: index.html
docs/: .gitignore  about.md  compatibility.md  contributing.md  design-decisions.md  index.md  mapping-workflow.md
docs/schema/: redcap_data_dictionary.yaml
examples/: README.md
instructions/: COMPATIBILITY.md  DESIGN_DECISIONS.md  EXAMPLE_WORKFLOW.md  MAPPING_WORKFLOW.md  example_instance.yaml
mapping-workflow/: index.html
pres/: PRESENTATION.md  PROJECT_STRUCTURE.md
reference/data_dictionary/: index.html
reference/data_dictionary/Boolean/: index.html
reference/data_dictionary/Choice/: index.html
reference/data_dictionary/Curie/: index.html
reference/data_dictionary/CustomAlignment/: index.html
reference/data_dictionary/DataDictionary/: index.html
reference/data_dictionary/Date/: index.html
reference/data_dictionary/DateOrDatetime/: index.html
reference/data_dictionary/Datetime/: index.html
reference/data_dictionary/Decimal/: index.html
reference/data_dictionary/Double/: index.html
reference/data_dictionary/Field/: index.html
reference/data_dictionary/FieldType/: index.html
reference/data_dictionary/Float/: index.html
reference/data_dictionary/IdentifierStatus/: index.html
reference/data_dictionary/Instrument/: index.html
reference/data_dictionary/Integer/: index.html
reference/data_dictionary/Jsonpath/: index.html
reference/data_dictionary/Jsonpointer/: index.html
reference/data_dictionary/MatrixRanking/: index.html
reference/data_dictionary/Ncname/: index.html
reference/data_dictionary/Nodeidentifier/: index.html
reference/data_dictionary/Objectidentifier/: index.html
reference/data_dictionary/Sparqlpath/: index.html
reference/data_dictionary/String/: index.html
reference/data_dictionary/TextValidationType/: index.html
reference/data_dictionary/Time/: index.html
reference/data_dictionary/Uri/: index.html
reference/data_dictionary/Uriorcurie/: index.html
reference/data_dictionary/branching_logic/: index.html
reference/data_dictionary/choices_calculations_slider_labels/: index.html
reference/data_dictionary/custom_alignment/: index.html
reference/data_dictionary/field_annotation/: index.html
reference/data_dictionary/field_label/: index.html
reference/data_dictionary/field_note/: index.html
reference/data_dictionary/field_type/: index.html
reference/data_dictionary/fields/: index.html
reference/data_dictionary/form_name/: index.html
reference/data_dictionary/identifier/: index.html
reference/data_dictionary/instrument_label/: index.html
reference/data_dictionary/instrument_name/: index.html
reference/data_dictionary/is_repeating/: index.html
reference/data_dictionary/label/: index.html
reference/data_dictionary/matrix_group_name/: index.html
reference/data_dictionary/matrix_ranking/: index.html
reference/data_dictionary/question_number/: index.html
reference/data_dictionary/raw_value/: index.html
reference/data_dictionary/redcap_data_dictionary/: index.html
reference/data_dictionary/required_field/: index.html
reference/data_dictionary/section_header/: index.html
reference/data_dictionary/text_validation_max/: index.html
reference/data_dictionary/text_validation_min/: index.html
reference/data_dictionary/text_validation_type_or_show_slider_number/: index.html
reference/data_dictionary/variable_field_name/: index.html
reference/record/: index.html
reference/record/Boolean/: index.html
reference/record/CheckboxState/: index.html
reference/record/Curie/: index.html
reference/record/Date/: index.html
reference/record/DateOrDatetime/: index.html
scripts/: gen_reference.sh
search/: search_index.json
src/linkml_redcap/: __init__.py  _resources.py  _version.py
src/redcap_data_dictionary/: __init__.py
tests/: __init__.py  test_data.py  test_grouping_roundtrip.py  test_loader.py  test_public_surface.py  test_record.py
tests/data/: README.md
tests/fixtures/: redcap_flat_sample.json  redcap_grouped_dropempty_sample.json
(+47 files in other folders)
