[tool.poetry]
name = "linkml-redcap"
version = "0.1.0"
description = "LinkML schemas modelling REDCap structures — the data dictionary and the record-data envelope"
authors = [
    "Adam SL Graefe <adam.graefe@charite.de>",
    "Corey Cox <corey@tislab.org>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/linkml/linkml-redcap"
repository = "https://github.com/linkml/linkml-redcap"
documentation = "https://linkml.github.io/linkml-redcap"
keywords = [
    "linkml",
    "redcap",
    "data-dictionary",
    "ontology",
    "fair",
    "rare-disease",
    "phenopackets",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
packages = [{ include = "linkml_redcap", from = "src" }]

# Ship schema YAMLs and the py.typed marker inside the wheel.
include = [
    { path = "src/linkml_redcap/**/schema/*.yaml", format = ["sdist", "wheel"] },
    { path = "src/linkml_redcap/py.typed", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
linkml-runtime = ">=1.9.4"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.8.0"       # for gen-pydantic, gen-doc, linkml-lint, linkml-validate
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.5"
pre-commit = ">=3.5"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9.5"
mkdocs-mermaid2-plugin = ">=1.1"
mkdocs-include-markdown-plugin = ">=6.0"  # render instructions/*.md as doc pages

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
